buku v5.1
2025-12-07

- auto-import from Brave Browser
- `amd64` docker image (will be built starting from next release)
- sorting bookmarks by absence/presence of a specific tag
- reordering all bookmarks in DB (based on specified sorting)
- support overriding default URI scheme for `browse()` (@meonkeys)
- include a `Sec-Fetch-Mode` header when fetching a webpage (in case the website admin cares about that)
- source: renaming main file to `buku.py` (which is the name it gets installed as)
- packaging: migrating from `setup.py` to `pyproject.toml` (@branchvincent)
- packaging: installing the manpage into `pipx` venv (@branchvincent)
- Python: adding v3.14, removing v3.9
- API: improved BukuCrypt
- Bukuserver: Swagger-based interactive documentation for the web-API
- Bukuserver: option to change initial value of Fetch checkbox in Create Bookmark form
- Bukuserver: migrate from Bootstrap v3 to v4
- migrate to the upcoming flask-admin v2 (see #753)

buku v5.0
2025-04-37

- removed URL shorten/expand feature (see #815)
- fix "htttp" typos in tests (@chenrui333)
- fix default value of `--url` used with `--update` (see #729)
- add Python 3.12 support (@chenrui333)
- add Python 3.13 support + use it as default for testing
- list [BukuBot](https://git.xmpp-it.net/sch/BukuBot) in the docs as a related project (@sjehuda)
- fix pylint warnings
- fix parsing of `<meta name="keywords">` in fetched webpages (see #734)
- fix `get_rec_all_by_ids()`
- fix autoimport of Firefox profiles with a custom absolute path (see #791)
- fix `--db` parameter being ignored by encryption actions (see #796)
- fix inconsistent handling of netloc (see #799)
- fix import in single-parent-folder-tag mode (see #807)
- add import/export in the `.rss` (Atom) format (@vagos)
- add `.atom` as an RSS import/export extension
- add description to XBEL export format (@sjehuda)
- support raw (unnamed) URLs when parsing Markdown/OrgMode (i.e. `<url>`/`[[url]]` respectively)