@@ -1,3 +1,7 @@
+buku (unreleased)
+
+- Bukuserver: mitigate Host header poisoning via BUKUSERVER_SERVER_NAME config
+
 buku v5.1
 2025-12-07
 
